# Object-detection-and-mapping-in-Gazebo-world-with-a-turtlebot-

./: README.md
group27_final/: CMakeLists.txt  package.xml  readme.MD
group27_final/config/: waypoint_params.yaml
group27_final/include/group27_final/: waffle_bot.hpp  wafflebot_navigation.hpp
group27_final/launch/: wafflebot.launch.py
group27_final/src/: waffle_bot.cpp  wafflebot_navigation.cpp
